=== master

* Cache Dataset#select_all datasets if no arguments are given (jeremyevans)

* Cache Dataset#returning datasets if no arguments are given (jeremyevans)

* Cache Dataset#qualify datasets if no argument is given (jeremyevans)

* Cache Dataset#lateral datasets (jeremyevans)

* Cache Dataset#from_self datasets if no options are given (jeremyevans)

* Cache Dataset#distinct datasets if no arguments or block is given (jeremyevans)

=== 5.7.0 (2018-04-01)

* Add Sequel.start_timer and .elapsed_seconds_since for more accurate elapsed time calculations on ruby 2.1+ (jeremyevans)

* Run Dataset#with_sql_{all,each,first,single_value} using a cached dataset to avoid clobbering the dataset's columns (jeremyevans)

* Add Database#convert_serial_to_identity on PostgreSQL 10.2+, which requires superuser access (jeremyevans)

* Fix Database#server_version when connecting to PostgreSQL 10.1+ in certain cases (jeremyevans)

* Free temporary clobs in the jdbc/oracle adapter to prevent a memory leak (jeremyevans) (#1482)

* Treat prepared statement errors due to changing types as disconnect errors in the postgres adapter (jeremyevans) (#1481)

* Add integer64 extension for treating Integer as a 64-bit integer when used as a generic type (jeremyevans)

* Allow many_to_pg_array remove_all_* method cast appropriately to work correctly for non-integer types (jeremyevans)

* Fix array_type for pg_array_to_many and many_to_pg_array associations in pg_array_associations plugin (jeremyevans)

* Use identity columns instead of serial columns for primary keys on PostgreSQL 10.2+ (jeremyevans)

* Support :identity option when creating columns on PostgreSQL 10+ to create identity columns (jeremyevans)

* Add Dataset#overriding_{system,user}_value on PostgreSQL for use with PostgreSQL 10+ identity columns (jeremyevans)

* Set :auto_increment schema entry correctly for PostgreSQL 10+ identity columns (jeremyevans)

=== 5.6.0 (2018-03-01)
